48
================

10/02/24 Fix clone_from_template overriding auto not for adoption option
09/02/24 Support for backup S3 provider #1423
08/02/24 "remember me" token with 2FA causing redirect loop #1433
08/02/24 Fix clone_from_template removing holds
07/02/24 Fix clone_from_template being broken on non-postgres databases
05/02/24 Add unified check-a-chip dialog with read-through cache #1430
02/02/24 Add coordinator person additional field type (Saggi Neuemann) #1428
02/02/24 Animal templates: Do not copy nonshelter in additionalflags
02/02/24 DocumentImgThumbLink/Src using web instead of doc preferred
02/02/24 Show a different message on login for IP failure
01/02/24 Refactor chip checking to backend service, support petaddress.com.au
31/01/24 Option to hide microchip supplier #1427
31/01/24 Move chip prefix database out of code to a shared file #1427
31/01/24 Use <<PersonDocumentImg*>> tokens to avoid collisions #1426
30/01/24 SavourLife/PetRescue: fix bug with null additional fields
29/01/24 Do not allow reply to override FROM on form notifications #1418
29/01/24 Global/default BCC option #1304
29/01/24 Allow user to default their email as from/reply #1424
29/01/24 Put use of "reply as from" on an option #1418
28/01/24 Fix bulk email bug caused by tag refactoring/param change #1422
26/01/24 Fix add animal/entry category setting type when visible #1378
25/01/24 Fix for OpenOffice tags appearing in token content #1422
25/01/24 Fix bug where deposit account could remain hidden in payment book
24/01/24 PetLink: Option to register chips from any manufacturer
24/01/24 Add missing quicklinks for consulting/waiting room
24/01/24 Fix bug with assigning additional fields to reservations
24/01/24 Invalidate payment to trx mappings if [None] is selected either side
24/01/24 Squash null units when writing to animallocation (ASM2 data fix)
23/01/24 Escape raw HTML in query interface results
22/01/24 PetFinder: Option to send a photo for adopted animals